Updated Skills Layout, and Added Font Families. Also Fixed alignment of header on mobile.

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,6 +1,4 @@
 :root {
-  font-mono: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
   --heading-color: rgba(39, 44, 41, 1);
   --content-color: #25282A;
   --background-color1: #E0E0E0;
@@ -19,6 +17,7 @@
 }
 
 main {
+  font-family: var(--font-montserrat);
   color: var(--content-color);
   background-color: var(--background-color1);
   background: linear-gradient(90deg, var(--background-color1) 22%, var(--background-color2) 100%);
@@ -29,6 +28,7 @@ h2,
 h3,
 h4,
 h5 {
+  font-family: var(--font-oswald);
   color: var(--heading-color);
 }
 
